added home page

--- a/index.html
+++ b/index.html
@@ -6,14 +6,253 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2hats | home</title>
+    <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="img/company-logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Students</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Companies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">FAQ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Stories &amp; Advice</a>
+                        </li>
+                    </ul>
+                    <button class="primary-button login-in-button">Login In</button>
+                    <button class="primary-button sign-up-button">Sign Up</button>
+                </div>
+            </div>
+        </nav>
+        <div class="banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h1>Your Future Starts Now.</h1>
+                        <p>Kickstart your professional career while you’re completing your degree. We offer paid work placements
+                            giving you relevant professional experience. Sign up for free below !</p>
+                        <form action="">
+                            <input type="text" placeholder="Your Email">
+                            <button class="primary-button">Get Ahead</button>
+                        </form>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="img/home-all-background-3.png" alt="" class="abs">
+                        <!-- <img src="img/home-clouds.png" alt="" class="abs"> -->
+                        <img src="img/home-all-graphics-small.png" alt="">
+                    </div>
+                </div>
+                <img src="img/home-clouds.png" alt="" class="abs">
+            </div>
+        </div>
+    </header>
+
+    <section class="our-process">
+        <img src="img/home-path-5.png" alt="" class="timeline-path" style="width: 100%">
+        <img src="img/home-line-2.png" alt="" class="timeline-path-sm">
+        <!-- // -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7 offset-lg-5">
+                    <div class="title">
+                        <h2>Our Process</h2>
+                        <p>Get connected to companies looking for SuperInterns. Start your professional work beyond internships
+                            with 2hats!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-1">
+                    <img src="img/home-a2-boy-resume.png" alt="" class="start-artwork">
+                </div>
+                <div class="col-lg-9">
+                    <div class="step step-1">
+                        <h3>Join the 2hats Community!</h3>
+                        <p>Receive specialised feedback and advice from 2hats to grow and improve.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bullet bullet-1"></div>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-6">
+                    <div class="step step-2">
+                        <!-- <div class="bullet" id="dest-1"></div> -->
+                        <h3>Find Your Career Path</h3>
+                        <p>Find what you really want to do. With an analysis of your strengths, see where you’ll be the perfect
+                            fit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="bullet bullet-2"></div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="step step-3">
+                        <h3>Showcase Your Talents</h3>
+                        <p>Showcase all your achievements, skills and talents and get personalised feedback. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="bullet bullet-3"></div>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-6">
+                    <div class="step step-4">
+                        <h3>Upskill and Grow</h3>
+                        <p>Learn with 2hats! Get relevant and specific training that you can use in your role.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="text">
+                        <h3>Placement &amp; Deployed into our Network</h3>
+                        <p>Access all the 2hats resources and feedback you need to have ongoing career development. Grow in
+                            your role and develop your skillset !</p>
+                    </div>
+                </div>
+            </div>
+            <div class="artwork">
+                <img src="img/home-a5-award.png" alt="" class="end-artwork">
+            </div>
+        </div>
+    </section>
+
+    <section class="how-it-works text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2>Grow</h2>
+                    <p>Get trained and develop with the 2hats system. With specialised feedback and advice from the 2hats team,
+                        learn how to supercharge your career.</p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Achieve</h2>
+                    <p>Do work that actually has an impact in your team. With paid professional placements, get ahead with career
+                        opportunities and upskilling offered only through 2hats. </p>
+                </div>
+                <div class="col-lg-4">
+                    <h2>Succeed</h2>
+                    <p>Find a career that you love with real world on-the-job experience and access to our business network.
+                        Be a SuperIntern that is desired by all businesses</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials text-center">
+        <div class="container">
+            <div class="customer">
+                <div class="customer-img">
+                    <img src="img/home-oval.png" alt="">
+                    <img src="img/home-future-pacific-logo.png" alt="" class="future-pacific-logo">
+                </div>
+                <p>"The placement that I got through 2hats really helped to shape me - I was able to get a head start in my
+                    career and helped me develop more interpersonal skills.”</p>
+                <p class="customer-name">Stella Lee, Property Officer at Future Pacific</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta text-center">
+        <div class="container">
+            <h2>Become a paid SuperIntern through 2hats today!</h2>
+            <button class="btn primary-button">Sign Up</button>
+            <button class="btn primary-button learn-more">Learn More</button>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <img src="img/company-logo.png" alt="" class="company-logo">
+                    <p>Any questions? Let's chat! Chat with us using the widget at the bottom-right of the page, or shoot us
+                        an email at
+                        <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
+                    </p>
+                </div>
+                <div class="col-lg-3">
+                    <ul>
+                        <li>
+                            <a href="#">Students</a>
+                        </li>
+                        <li>
+                            <a href="#">Companies</a>
+                        </li>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#">FAQ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <ul>
+                        <li>
+                            <a href="#">Stories &amp; Advice</a>
+                        </li>
+                        <li>
+                            <a href="#">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Terms &amp; Conditions</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 follow-us">
+                    <h4>Follow Us</h4>
+                    <a href="https://www.facebook.com/2hats.com.au/">
+                        <img src="img/facebook.svg" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/company/2hats-von-technology/">
+                        <img src="img/linkedin.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <p class="copyright">&copy; 2hats 2018. All Rights Reserved.</p>
+        </div>
+    </footer>
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/leader-line.min.js"></script> -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
