finished home page

--- a/index.html
+++ b/index.html
@@ -84,66 +84,46 @@
         <img src="img/home-line-2.png" alt="" class="timeline-path-sm">
         <!-- // -->
         <div class="container">
-            <div class="row">
-                <div class="col-lg-7 offset-lg-5">
-                    <div class="title">
-                        <h2>Our Process</h2>
-                        <p>Get connected to companies looking for SuperInterns. Start your professional work beyond internships
-                            with 2hats!</p>
-                    </div>
-                </div>
+
+            <div class="title">
+                <h2>Our Process</h2>
+                <p>Get connected to companies looking for SuperInterns. Start your professional work beyond internships with
+                    2hats!</p>
             </div>
-            <div class="row">
-                <div class="col-lg-1">
-                    <img src="img/home-a2-boy-resume.png" alt="" class="start-artwork">
-                </div>
-                <div class="col-lg-9">
-                    <div class="step step-1">
-                        <h3>Join the 2hats Community!</h3>
-                        <p>Receive specialised feedback and advice from 2hats to grow and improve.</p>
-                    </div>
-                </div>
+
+            <div class="artwork artwork-1">
+                <img src="img/home-a2-boy-resume.png" alt="" class="start-artwork">
             </div>
+            <div class="step step-1">
+                <h3>Join the 2hats Community!</h3>
+                <p>Receive specialised feedback and advice from 2hats to grow and improve.</p>
+            </div>
+
             <div class="bullet bullet-1"></div>
-            <div class="row">
-                <div class="col-lg-6 offset-lg-6">
-                    <div class="step step-2">
-                        <!-- <div class="bullet" id="dest-1"></div> -->
-                        <h3>Find Your Career Path</h3>
-                        <p>Find what you really want to do. With an analysis of your strengths, see where you’ll be the perfect
-                            fit.
-                        </p>
-                    </div>
-                </div>
+            <div class="step step-2">
+                <h3>Find Your Career Path</h3>
+                <p>Find what you really want to do. With an analysis of your strengths, see where you’ll be the perfect fit.
+                </p>
             </div>
+
             <div class="bullet bullet-2"></div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="step step-3">
-                        <h3>Showcase Your Talents</h3>
-                        <p>Showcase all your achievements, skills and talents and get personalised feedback. </p>
-                    </div>
-                </div>
+            <div class="step step-3">
+                <h3>Showcase Your Talents</h3>
+                <p>Showcase all your achievements, skills and talents and get personalised feedback. </p>
             </div>
+
             <div class="bullet bullet-3"></div>
-            <div class="row">
-                <div class="col-lg-6 offset-lg-6">
-                    <div class="step step-4">
-                        <h3>Upskill and Grow</h3>
-                        <p>Learn with 2hats! Get relevant and specific training that you can use in your role.</p>
-                    </div>
-                </div>
+            <div class="step step-4">
+                <h3>Upskill and Grow</h3>
+                <p>Learn with 2hats! Get relevant and specific training that you can use in your role.</p>
             </div>
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="text">
-                        <h3>Placement &amp; Deployed into our Network</h3>
-                        <p>Access all the 2hats resources and feedback you need to have ongoing career development. Grow in
-                            your role and develop your skillset !</p>
-                    </div>
-                </div>
+            
+            <div class="step step-5">
+                <h3>Placement &amp; Deployed into our Network</h3>
+                <p>Access all the 2hats resources and feedback you need to have ongoing career development. Grow in your role
+                    and develop your skillset !</p>
             </div>
-            <div class="artwork">
+            <div class="artwork artwork-2">
                 <img src="img/home-a5-award.png" alt="" class="end-artwork">
             </div>
         </div>
