Adjusted bullets numbering

--- a/index.html
+++ b/index.html
@@ -76,22 +76,20 @@
                 <h3 class="wow slideInRight">Join the 2hats Community!</h3>
                 <p class="wow slideInRight" data-animation-delay="2s">Receive specialised feedback and advice from 2hats to grow and improve.</p>
             </div>
-
-            <div class="bullet bullet-1"></div>
+            <div class="bullet bullet-2"></div>
             <div class="step step-2">
                 <h3 class="wow slideInRight">Find Your Career Path</h3>
                 <p class="wow slideInRight" data-animation-delay="2s">Find what you really want to do. With an analysis of your strengths, see where you’ll be the perfect fit.
                 </p>
             </div>
 
-            <div class="bullet bullet-2"></div>
+            <div class="bullet bullet-3"></div>
             <div class="step step-3">
                 <h3 class="wow slideInLeft">Showcase Your Talents</h3>
-                <p class="wow slideInLeft" data-animation-delay="2s">Showcase all your achievements, skills and
-                    talents and get personalised feedback. </p>
+                <p class="wow slideInLeft" data-animation-delay="2s">Showcase all your achievements, skills and talents and get personalised feedback. </p>
             </div>
 
-            <div class="bullet bullet-3"></div>
+            <div class="bullet bullet-4"></div>
             <div class="step step-4">
                 <h3 class="wow slideInRight">Upskill and Grow</h3>
                 <p class="wow slideInRight" data-animation-delay="2s">Learn with 2hats! Get relevant and specific training that you can use in your role.</p>
@@ -158,7 +156,8 @@
                 <div class="col col-2x company-info">
                     <img src="img/company-logo.png" alt="" class="company-logo">
                     <p>Any questions? Let's chat! Chat with us using the widget at the bottom-right of the page, or shoot us
-                        an email at <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
+                        an email at
+                        <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
                     </p>
                 </div>
                 <div class="col col-1x menu-links">
