start solving issue Minjie

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2hats | home</title>
+    <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -35,6 +36,11 @@
                     </ul>
                     <button class="primary-button login">Log In</button>
                     <button class="primary-button sign-up">Sign Up</button>
+                </div>
+                <div class="navbar-toggler" id="navbar-toggler">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
         </div>
