--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <h1>Your Future Starts Now.</h1>
                 <p>Kickstart your professional career while you’re completing your degree. We offer paid work placements giving
-                    you relevant professional experience. Sign up for free below !</p>
+                    you relevant professional experience. Sign up for free below!</p>
                 <form action="">
                     <input type="text" placeholder="Your Email">
                     <button class="primary-button">Get Ahead</button>
@@ -104,7 +104,7 @@
             <div class="step step-5">
                 <h3 class="wow slideInLeft">Placement &amp; Deployed into our Network</h3>
                 <p class="wow slideInLeft" data-animation-delay="2s">Access all the 2hats resources and feedback you need to have ongoing career development. Grow in your role
-                    and develop your skillset !</p>
+                    and develop your skillset!</p>
             </div>
             <div class="artwork artwork-2">
                 <img src="img/home-a5-award.png" alt="" class="end-artwork">
@@ -161,7 +161,7 @@
             <div class="row">
                 <div class="col col-2x company-info">
                     <img src="img/company-logo.png" alt="" class="company-logo">
-                    <p>Any questions? Let's chat! Chat with us using the widget at the bottom-right of the page, or shoot us
+                    <p><span>Any questions? Let's chat!</span> Chat with us using the widget at the bottom-right of the page, or shoot us
                         an email at
                         <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
                     </p>
