--- a/company.html
+++ b/company.html
@@ -5,16 +5,242 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>2hats | company</title>
+    <title>2hats | companies</title>
     <link rel="icon" href="img/favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
+    <header class="companies-header">
+        <div class="top-menu">
+            <div class="container">
+                <img src="img/company-logo.png" alt="" class="logo">
+                <div class="navbar">
+                    <ul>
+                        <li>
+                            <a href="index.html">Students</a>
+                        </li>
+                        <li class="active">
+                            <a href="">Companies</a>
+                        </li>
+                        <li>
+                            <a href="">About Us</a>
+                        </li>
+                        <li>
+                            <a href="">FAQ</a>
+                        </li>
+                        <li>
+                            <a href="">Stories &amp; Advice</a>
+                        </li>
+                    </ul>
+                    <button class="primary-button login">Log In</button>
+                    <button class="primary-button sign-up">Sign Up</button>
+                </div>
+                <div class="navbar-toggler" id="navbar-toggler">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="container">
+
+                <h1>SuperInterns Powering Your Business.</h1>
+                <p>Highly specialised students that have been screened and trained using the 2hats Selection Process.</p>
+                <img src="img/company-layer-122x.png" alt="" class="artwork-1">
+                <img src="img/company-layer-102x.png" alt="" class="artwork-2">
+            </div>
+        </div>
+    </header>
+
+    <section class="our-process selection-process">
+        <div class="container">
+
+            <div class="title">
+                <h2>Our Selection Process</h2>
+                <p>We find the best SuperInterns using our 7-Step Selection Process, reducing headaches, hours of work
+                    and minimising risk so that you can succeed.
+                </p>
+            </div>
+            <img src="img/company-path-9.png" alt="" class="company-path">
+            <div class="step step-1">
+                <div class="step-content">
+                    <div class="step-title">Resume Submission &amp; Review</div>
+                    <div class="step-description">Analytical review and selection of candidates where only the top 20%
+                        pass this stage.</div>
+                </div>
+                <hr>
+            </div>
+            <div class="step step-2">
+                <div class="step-content">
+                    <div class="step-title">Online Interview</div>
+                    <div class="step-description">A secondary assessment of capabilities to narrow down to the best of
+                        the best. We evaluate communication skills and logic.</div>
+                </div>
+                <hr>
+            </div>
+            <div class="step step-3">
+                <div class="step-content">
+                    <div class="step-title">Personality Profiling</div>
+                    <div class="step-description">Assessing the fit of character validated by a third party, funnelling
+                        candidates into areas of strength.</div>
+                </div>
+                <hr>
+            </div>
+            <div class="step step-4">
+                <div class="step-content">
+                    <div class="step-title">Face-to-Face Interview</div>
+                    <div class="step-description">Conducted through the 2hats Essential-Criteria Model, we validate
+                        prior experience and check developed skillsets.</div>
+                </div>
+                <hr>
+            </div>
+            <div class="step step-5">
+                <div class="step-content">
+                    <div class="step-title">Pitch &amp; Solution Creation</div>
+                    <div class="step-description">Students generate a pitch and a presentation to solve a business
+                        problem in their area. <br>We assess soft skills in presentation, communication and
+                        problem-solving.</div>
+                </div>
+                <hr>
+            </div>
+            <div class="step step-6">
+                <div class="step-content">
+                    <div class="step-title">Role &amp; Career Training</div>
+                    <div class="step-description">Our SuperInterns are trained in the specific role they are entering
+                        into, all ready to start the next day. We reduce the risk and increase the speed of
+                        on-boarding.</div>
+                </div>
+                <hr>
+            </div>
+            <div class="step step-7">
+                <div class="step-content">
+                    <div class="step-title">Placement &amp; Ongoing Career Development</div>
+                    <div class="step-description">Only the top 5% of candidates receive a placement. We help grow the
+                        SuperInterns with feedback consultations, creating the best 2hats experience.</div>
+                </div>
+                <!-- <hr> -->
+            </div>
+        </div>
+    </section>
+
+    <section class="how-it-works companies-how-it-works text-center">
+        <div class="container">
+            <div class="features">
+                <div class="feature feature-1">
+                    <h2>Recruitment Made Easy</h2>
+                    <p>Reduce your tedious recruitment process! Through our dedicated talent pool, we are able to
+                        uncover the hidden gems connecting you with the top 5% of interviewed candidates. </p>
+                </div>
+                <div class="feature feature-1">
+                    <h2>Elite Student Reach</h2>
+                    <p>Our qualified SuperInterns have all been trained and assessed. They all possess the
+                        interpersonal, critical thinking and problem skills to ensure their success. </p>
+                </div>
+                <div class="feature feature-1">
+                    <h2>Execute for Success</h2>
+                    <p>Trial a larger number of SuperInterns with our job-sharing system and build your relationship
+                        with the best of the best. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials text-center">
+        <div class="container">
+            <div class="customer">
+                <div class="customer-img">
+                    <!-- <img src="img/home-oval.png" alt=""> -->
+                    <img src="img/company-logoclear.png" alt="" class="">
+                </div>
+                <div class="achievements">
+                    <div class="achievement">
+                        <p>We saved Future Pacific over 50 working hours of recruitment and on-boarding, with
+                            SuperInterns starting the next day.</p>
+                    </div>
+                    <div class="achievement">
+                        <p>Reduced recruitment costs by over $50,000 through 7 SuperIntern placements.</p>
+                    </div>
+                    <div class="achievement">
+                        <p>Over 50% of our SuperInterns received an offer to move to a part-time contract once they finished their placement period.</p>
+                    </div>
+                </div>
+                <p>"The placement that I got through 2hats really helped to shape me - I was able to get a head start
+                    in my career and helped me develop more interpersonal skills.”</p>
+                <p class="customer-name">Stella Lee. , Property Intern at Future Pacific</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta companies-cta text-center">
+        <div class="container">
+            <h2>Become a paid SuperIntern through 2hats today!</h2>
+            <button class="btn primary-button">Sign Up</button>
+            <button class="btn primary-button learn-more">Learn More</button>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col col-2x company-info">
+                    <img src="img/company-logo.png" alt="" class="company-logo">
+                    <p><span>Any questions? Let's chat!</span> Chat with us using the widget at the bottom-right of the
+                        page, or shoot us
+                        an email at
+                        <a href="mailto:info@2hats.com.au" class="mail">info@2hats.com.au</a>
+                    </p>
+                </div>
+                <div class="col col-1x menu-links">
+                    <ul>
+                        <li>
+                            <a href="#">Students</a>
+                        </li>
+                        <li>
+                            <a href="#">Companies</a>
+                        </li>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#">FAQ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col col-1x quick-links">
+                    <ul>
+                        <li>
+                            <a href="#">Stories &amp; Advice</a>
+                        </li>
+                        <li>
+                            <a href="#">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Terms &amp; Conditions</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col col-1x follow-us">
+                    <h4>Follow Us</h4>
+                    <a href="https://www.facebook.com/2hats.com.au/">
+                        <img src="img/facebook.svg" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/company/2hats-von-technology/">
+                        <img src="img/linkedin.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <p class="copyright">&copy; 2hats 2018. All Rights Reserved.</p>
+        </div>
+    </footer>
+
     <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
