--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <a href="">Students</a>
                         </li>
                         <li>
-                            <a href="">Companies</a>
+                            <a href="company.html">Companies</a>
                         </li>
                         <li>
                             <a href="">About Us</a>
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <section class="our-process">
+    <section class="our-process main-process">
         <img src="img/home-path-5.png" alt="" class="timeline-path" style="width: 100%">
         <img src="img/home-line-2.png" alt="" class="timeline-path-sm">
         <!-- // -->
@@ -79,13 +79,13 @@
                 <img src="img/home-a2-boy-resume.png" alt="" class="start-artwork">
             </div>
             <div class="step step-1">
-                <h3 class="wow slideInRight">Join the 2hats Community!</h3>
-                <p class="wow slideInRight" data-animation-delay="2s">Receive specialised feedback and advice from 2hats to grow and improve.</p>
+                <h3>Join the 2hats Community!</h3>
+                <p>Receive specialised feedback and advice from 2hats to grow and improve.</p>
             </div>
             <div class="bullet bullet-2"></div>
             <div class="step step-2">
-                <h3 class="wow slideInRight">Find Your Career Path</h3>
-                <p class="wow slideInRight" data-animation-delay="2s">Find what you really want to do. With an analysis of your strengths, see where you’ll be the perfect fit.
+                <h3>Find Your Career Path</h3>
+                <p>Find what you really want to do. With an analysis of your strengths, see where you’ll be the perfect fit.
                 </p>
             </div>
 
@@ -97,13 +97,13 @@
 
             <div class="bullet bullet-4"></div>
             <div class="step step-4">
-                <h3 class="wow slideInRight">Upskill and Grow</h3>
-                <p class="wow slideInRight" data-animation-delay="2s">Learn with 2hats! Get relevant and specific training that you can use in your role.</p>
+                <h3>Upskill and Grow</h3>
+                <p>Learn with 2hats! Get relevant and specific training that you can use in your role.</p>
             </div>
 
             <div class="step step-5">
-                <h3 class="wow slideInLeft">Placement &amp; Deployed into our Network</h3>
-                <p class="wow slideInLeft" data-animation-delay="2s">Access all the 2hats resources and feedback you need to have ongoing career development. Grow in your role
+                <h3>Placement &amp; Deployed into our Network</h3>
+                <p>Access all the 2hats resources and feedback you need to have ongoing career development. Grow in your role
                     and develop your skillset!</p>
             </div>
             <div class="artwork artwork-2">
